# ratlog

./: .env.example  CLI_LOGIN_INTEGRATION.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: release.yml
src/: app.rs  cli.rs  constants.rs  login.rs  logs.rs  main.rs  settings.rs  theme.rs  util.rs
