[package]
name = "ratlog"
version = "0.2.1"
description = "Terminal log viewer with live filtering, tail-style follow and RAM display (Ratatui TUI)"
authors = ["Ahmet Barut <ahmetbarut588@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "5.0"
futures = "0.3.32"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sysinfo = "0.38"
tokio = { version = "1.40.0", features = ["full"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
